--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -69,7 +69,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:text="Description"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColorPrimary"
                     android:textSize="17sp"
                     android:textStyle="bold"/>
 
@@ -99,7 +99,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:text="Venue"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColorPrimary"
                     android:textSize="17sp"
                     android:textStyle="bold"></TextView>
 
@@ -130,7 +130,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:text="Cost"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColorPrimary"
                     android:textSize="17sp"
                     android:textStyle="bold"></TextView>
 
@@ -160,7 +160,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:text="Date"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColorPrimary"
                     android:textSize="17sp"
                     android:textStyle="bold"></TextView>
 
@@ -190,7 +190,7 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="5dp"
                     android:text="Time"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="@color/textColorPrimary"
                     android:textSize="17sp"
                     android:textStyle="bold"></TextView>
 
