--- a/app/src/main/res/layout/fragment_blog_full.xml
+++ b/app/src/main/res/layout/fragment_blog_full.xml
@@ -36,7 +36,7 @@
                 android:layout_marginLeft="9dp"
                 android:layout_marginTop="18dp"
                 android:text="@string/gmann"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/textColorPrimary"
                 android:textSize="18dp"
                 android:layout_marginBottom="10dp"
                 android:fontFamily="sans-serif-condensed"
