--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,13 +15,14 @@
         android:text="What's new?"
         android:fontFamily="sans-serif-condensed"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/textColorPrimary"
         android:textStyle="italic"
         android:typeface="normal"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="9dp"
-        android:layout_marginTop="27dp" />
+        android:layout_marginTop="27dp"
+        android:layout_alignParentLeft="true" />
 
     <View
         android:id="@+id/line2"
