--- a/app/src/main/res/layout/list_row_event_details.xml
+++ b/app/src/main/res/layout/list_row_event_details.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginLeft="10dp"
         android:text="Detail Heading"
-        android:textColor="@color/color3"
+        android:textColor="@color/textColorPrimary"
         android:textStyle="bold"
         android:textSize="17sp" >
     </TextView>
