--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimary">#3293c3</color>
+    <color name="colorPrimaryDark">#006ba2</color>
     <color name="textColorPrimary">#212121</color>
     <color name="windowBackground">#FFFFFF</color>
     <color name="navigationBarColor">#000000</color>
-    <color name="colorAccent">#448AFF</color>
+    <color name="colorAccent">#878787</color>
     <color name="tabsScrollColor">#FFF</color>
     <color name="list_divider">#BDBDBD</color>
     <color name="list_row_start_color">#ffffff</color>
