--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="#FFFFFF"
     android:weightSum="1">
 
     <!-- Feedback Label -->
@@ -16,21 +16,21 @@
         android:layout_height="wrap_content">
         <RadioButton
             android:layout_width="wrap_content"
-            android:textColor="#fff"
+            android:textColor="@color/textColorPrimary"
             android:layout_height="wrap_content"
             android:shadowColor="#fff"
             android:text="Suggestion"
             android:id="@+id/suggestion"/>
         <RadioButton
             android:layout_width="wrap_content"
-            android:textColor="#fff"
+            android:textColor="@color/textColorPrimary"
             android:layout_height="wrap_content"
             android:shadowColor="#fff"
             android:text="Complain"
             android:id="@+id/complain"/>
         <RadioButton
             android:layout_width="wrap_content"
-            android:textColor="#fff"
+            android:textColor="@color/textColorPrimary"
             android:layout_height="wrap_content"
             android:shadowColor="#fff"
             android:text="Add On Feature"
@@ -46,7 +46,7 @@
         android:layout_marginTop="50dp"
         android:layout_gravity="center"
         android:gravity="top|left"
-        android:background="#fff"
+        android:background="#EEEEEE"
         android:maxLines="10"
         android:layout_height="wrap_content"
         android:layout_width="320dp"
@@ -60,9 +60,9 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="20dp"
     android:layout_marginBottom="24dp"
-    android:background="#fff"
+    android:background="@color/colorPrimary"
     android:textStyle="bold"
-    android:textColor="@color/colorPrimaryDark"
+    android:textColor="#FFFFFF"
     android:padding="12dp"
     android:text="Submit"/>
 
