--- a/app/src/main/res/layout/list_row_lecture.xml
+++ b/app/src/main/res/layout/list_row_lecture.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingLeft="1dp"
-    android:paddingTop="5dp"
-    android:paddingRight="1dp"
-    android:paddingBottom="7dp"
     >
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/cv"
-        >
+        android:layout_width="fill_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:layout_margin="5dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:contentPadding="5dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -28,7 +29,8 @@
                 android:text="6:00 pm "
                 android:textSize="15sp"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true" />
 
 
 
