--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -43,147 +44,5 @@
         android:layout_below="@id/line2"
         android:layout_margin="9dp"/>
 
-    <LinearLayout
-        android:id="@+id/buttonCV"
-        android:layout_width="match_parent"
-        android:layout_height="63dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/shadow"
-        android:gravity="bottom"
-        android:orientation="horizontal"
-        android:weightSum="4">
 
-        <RelativeLayout
-            android:id="@+id/button_home"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/image_button_home"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_scan" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_button_home"
-                android:layout_centerHorizontal="true"
-                android:paddingBottom="3dp"
-                android:text="Home"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/flat_blue" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/button_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/image_button_profile"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_share_loc" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_button_profile"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:paddingBottom="3dp"
-                android:text="Profile"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/flat_red" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/button_events"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/image_button_events"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_share" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_button_events"
-                android:layout_centerHorizontal="true"
-                android:paddingBottom="3dp"
-                android:text="Events"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/flat_yellow" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/button_blogs"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/image_button_blogs"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_history" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_button_blogs"
-                android:layout_centerHorizontal="true"
-                android:paddingBottom="3dp"
-                android:text="Blogs"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/flat_green" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/button_notifications"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
-
-            <ImageView
-                android:id="@+id/image_button_notifications"
-                android:layout_width="wrap_content"
-                android:layout_height="32dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="8dp"
-                android:src="@drawable/ic_history" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/image_button_notifications"
-                android:layout_centerHorizontal="true"
-                android:paddingBottom="3dp"
-                android:text="Notifications"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:textColor="@color/flat_green" />
-
-        </RelativeLayout>
-    </LinearLayout>
-
-
-</RelativeLayout>
+    </RelativeLayout>
