--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,6 +28,7 @@
     <color name="flat_red">#db4336</color>
     <color name="flat_yellow">#f3b60d</color>
     <color name="flat_green">#109d59</color>
+    <color name="white">#FFFFFF</color>
 
 
 
