--- a/app/src/main/res/layout/fragment_tlogs.xml
+++ b/app/src/main/res/layout/fragment_tlogs.xml
@@ -23,9 +23,11 @@
 <!--</android.support.design.widget.CoordinatorLayout>-->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:background="#fff"
     >
 
 <android.support.v7.widget.RecyclerView
